# nba_prediction

./: Makefile  README.md  pyproject.toml  requirements.txt
at1_kaggle_competition_group_12/: __init__.py  dataset.py  features.py  plots.py
at1_kaggle_competition_group_12/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: li_yeeting-24866954-week1_logisticregression_baseline.ipynb  li_yeeting-24866954-week2_gradientboosting.ipynb
notebooks/: li_yeeting-24866954-week1_randomforest.ipynb  shrestha_dipesh-24996124-week1_LassoRegression.ipynb  shrestha_dipesh-24996124-week1_LogisticRegression.ipynb  shrestha_dipesh-24996124-week2_randomforest.ipynb  shrestha_dipesh-24996124-week3_xgboost.ipynb  shrestha_dipesh_24996124-week1_final_log_reg.ipynb  shrestha_dipesh_24996124-week2_final_RF.ipynb  shrestha_dipesh_24996124-week3_Feature-EngineeredXGboost.ipynb  shrestha_dipesh_24996124-week3_Feature-EngineeredXGboost_removing_pick_and_rec_rank.ipynb  shrestha_dipesh_24996124-week4_test.ipynb  valentinuzzi_alberto-13042801-week1_Initial.ipynb  valentinuzzi_alberto-13042801-week1_randomforest.ipynb  valentinuzzi_alberto-13042801-week2_GBC.ipynb  valentinuzzi_alberto-13042801-week3_GBC.ipynb  valentinuzzi_alberto-13042801-week3_NeuralNetwork.ipynb  valentinuzzi_alberto-13042801-week3_model.ipynb
