[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "at1_kaggle_competition_group_12"
version = "0.0.1"
description = "Internal Competition"
authors = [
  { name = "Group 12" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.4"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["at1_kaggle_competition_group_12"]
force_sort_within_sections = true
